[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
Unidecode = "^1.3.4"
discord = "^1.7.3"
fuzzywuzzy = "^0.18.0"
pymediawiki = "^0.7.1"
replit = "^3.2.4"
python-Levenshtein = "^0.12.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"